Fix header z-index

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -9,6 +9,7 @@
 	align-items: center;
 	justify-content: center;
 	padding: 0 16px;
+	z-index: 2;
 
 	.headerItemsContainer {
 		display: flex;
